Added contribution link

--- a/src/T4Site/index.tt
+++ b/src/T4Site/index.tt
@@ -88,6 +88,9 @@
 > wt-shader-tool -p
     </pre>
 
+    <h2>Contributing</h2>
+    If you like to contribute shaders or other improvements go <a target="_blank" href="https://github.com/mrange/windows-terminal-shader-gallery">here</a>.
+
     <h2>Gallery</h2>
 <#
   var docsPath      = Path.GetFullPath("docs/");
